--- a/index.html
+++ b/index.html
@@ -59,6 +59,6 @@
 </div>
 <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
 <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
-<script src="./notes.js"></script>
+<script src="./dist/notes.js"></script>
 </body>
 </html>
